--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -12319,13 +12319,86 @@ button.close {
 }
 
 /* App imports */
-/* line 8, ../sass/styles.scss */
+@media all and (max-width: 768px) {
+  /* line 11, ../sass/_sidebar.scss */
+  .navbar-toggle {
+    left: -40px;
+    float: none !important;
+    position: absolute;
+  }
+
+  /* line 16, ../sass/_sidebar.scss */
+  .navbar {
+    position: fixed;
+    right: 0;
+    left: auto;
+    top: 0;
+    border-width: 0 0 1px;
+    width: 200px;
+    height: 100%;
+    -moz-transform: translateX(200px);
+    -o-transform: translateX(200px);
+    -ms-transform: translateX(200px);
+    -webkit-transform: translateX(200px);
+    transform: translateX(200px);
+    -webkit-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    -moz-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  /* line 34, ../sass/_sidebar.scss */
+  .navbar.in {
+    -moz-transform: translateX(0);
+    -o-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+
+  /* line 42, ../sass/_sidebar.scss */
+  .navbar .close-nav {
+    display: none;
+  }
+
+  /* line 46, ../sass/_sidebar.scss */
+  .navbar.in .close-nav {
+    display: inline-block;
+  }
+
+  /* line 49, ../sass/_sidebar.scss */
+  .navbar.in .open-nav {
+    display: none;
+  }
+
+  /* line 54, ../sass/_sidebar.scss */
+  #main {
+    -moz-transform: translateX(0);
+    -o-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    -moz-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  /* line 66, ../sass/_sidebar.scss */
+  #main.in {
+    -moz-transform: translateX(-200px);
+    -o-transform: translateX(-200px);
+    -ms-transform: translateX(-200px);
+    -webkit-transform: translateX(-200px);
+    transform: translateX(-200px);
+    opacity: .5;
+  }
+}
+/* line 11, ../sass/styles.scss */
 html {
   width: 100%;
   height: 100%;
 }
 
-/* line 13, ../sass/styles.scss */
+/* line 16, ../sass/styles.scss */
 body {
   width: 100%;
   height: 100%;
@@ -12335,7 +12408,7 @@ body {
   -webkit-tap-highlight-color: rgba(244, 100, 95, 0.2);
 }
 
-/* line 22, ../sass/styles.scss */
+/* line 25, ../sass/styles.scss */
 h1, .h1,
 h2, .h2,
 h3, .h3,
@@ -12349,7 +12422,7 @@ h6, .h6 {
   letter-spacing: 1px;
 }
 
-/* line 35, ../sass/styles.scss */
+/* line 38, ../sass/styles.scss */
 p {
   margin: 0 0 25px;
   font-size: 18px;
@@ -12357,32 +12430,32 @@ p {
 }
 
 @media (min-width: 767px) {
-  /* line 43, ../sass/styles.scss */
+  /* line 46, ../sass/styles.scss */
   p {
     margin: 0 0 35px;
     font-size: 20px;
     line-height: 1.6;
   }
 }
-/* line 51, ../sass/styles.scss */
+/* line 54, ../sass/styles.scss */
 a {
   color: #F4645F;
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-/* line 57, ../sass/styles.scss */
+/* line 60, ../sass/styles.scss */
 a:hover, a:focus {
   text-decoration: none;
   color: #f4635e;
 }
 
-/* line 64, ../sass/styles.scss */
+/* line 67, ../sass/styles.scss */
 .light {
   font-weight: 400;
 }
 
-/* line 68, ../sass/styles.scss */
+/* line 71, ../sass/styles.scss */
 .navbar-custom {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(244, 100, 95, 0.3);
@@ -12390,47 +12463,47 @@ a:hover, a:focus {
   font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
   background-color: #FFF;
 }
-/* line 75, ../sass/styles.scss */
+/* line 78, ../sass/styles.scss */
 .navbar-custom .navbar-brand {
   font-weight: 700;
 }
-/* line 78, ../sass/styles.scss */
+/* line 81, ../sass/styles.scss */
 .navbar-custom .navbar-brand:focus {
   outline: none;
 }
-/* line 82, ../sass/styles.scss */
+/* line 85, ../sass/styles.scss */
 .navbar-custom .navbar-brand .navbar-toggle {
   padding: 4px 6px;
   font-size: 16px;
   color: #F4645F;
 }
-/* line 87, ../sass/styles.scss */
+/* line 90, ../sass/styles.scss */
 .navbar-custom .navbar-brand .navbar-toggle:focus, .navbar-custom .navbar-brand .navbar-toggle:active {
   outline: none;
 }
-/* line 94, ../sass/styles.scss */
+/* line 97, ../sass/styles.scss */
 .navbar-custom a {
   color: #F4645F;
 }
-/* line 102, ../sass/styles.scss */
+/* line 105, ../sass/styles.scss */
 .navbar-custom .nav li.active {
   outline: none;
   background-color: rgba(244, 100, 95, 0.3);
 }
-/* line 107, ../sass/styles.scss */
+/* line 110, ../sass/styles.scss */
 .navbar-custom .nav li a {
   -webkit-transition: background .3s ease-in-out;
   -moz-transition: background .3s ease-in-out;
   transition: background .3s ease-in-out;
 }
-/* line 112, ../sass/styles.scss */
+/* line 115, ../sass/styles.scss */
 .navbar-custom .nav li a:hover, .navbar-custom .nav li a:focus, .navbar-custom .nav li a.active {
   outline: none;
   background-color: rgba(244, 100, 95, 0.3);
 }
 
 @media (min-width: 767px) {
-  /* line 125, ../sass/styles.scss */
+  /* line 128, ../sass/styles.scss */
   .navbar {
     padding: 20px 0;
     border-bottom: none;
@@ -12441,22 +12514,22 @@ a:hover, a:focus {
     transition: background .5s ease-in-out,padding .5s ease-in-out;
   }
 
-  /* line 135, ../sass/styles.scss */
+  /* line 138, ../sass/styles.scss */
   .top-nav-collapse {
     padding: 0;
     background-color: #FFF;
   }
 
-  /* line 140, ../sass/styles.scss */
+  /* line 143, ../sass/styles.scss */
   .navbar-custom.top-nav-collapse {
     border-bottom: 1px solid rgba(244, 100, 95, 0.3);
   }
 }
-/* line 145, ../sass/styles.scss */
+/* line 148, ../sass/styles.scss */
 .intro {
   display: table;
   width: 100%;
-  height: auto;
+  height: 100vh;
   padding: 100px 0;
   text-align: center;
   color: #F4645F;
@@ -12466,36 +12539,36 @@ a:hover, a:focus {
   background-size: cover;
   -o-background-size: cover;
 }
-/* line 158, ../sass/styles.scss */
+/* line 161, ../sass/styles.scss */
 .intro .intro-body {
   display: table-cell;
   vertical-align: middle;
 }
-/* line 162, ../sass/styles.scss */
+/* line 165, ../sass/styles.scss */
 .intro .intro-body .brand-heading {
   font-size: 40px;
 }
-/* line 166, ../sass/styles.scss */
+/* line 169, ../sass/styles.scss */
 .intro .intro-body .intro-text {
   font-size: 18px;
 }
 
 @media (min-width: 767px) {
-  /* line 173, ../sass/styles.scss */
+  /* line 176, ../sass/styles.scss */
   .intro {
-    height: 100%;
+    height: 100vh;
     padding: 0;
   }
-  /* line 179, ../sass/styles.scss */
+  /* line 182, ../sass/styles.scss */
   .intro .intro-body .brand-heading {
     font-size: 100px;
   }
-  /* line 183, ../sass/styles.scss */
+  /* line 186, ../sass/styles.scss */
   .intro .intro-body .intro-text {
     font-size: 25px;
   }
 }
-/* line 190, ../sass/styles.scss */
+/* line 193, ../sass/styles.scss */
 .btn-circle {
   width: 70px;
   height: 70px;
@@ -12510,19 +12583,19 @@ a:hover, a:focus {
   -moz-transition: background .3s ease-in-out;
   transition: background .3s ease-in-out;
 }
-/* line 204, ../sass/styles.scss */
+/* line 207, ../sass/styles.scss */
 .btn-circle:hover, .btn-circle:focus {
   outline: none;
   color: #F4645F;
   background: rgba(244, 100, 95, 0.1);
 }
 
-/* line 213, ../sass/styles.scss */
+/* line 216, ../sass/styles.scss */
 .content-section {
   padding-top: 100px;
 }
 
-/* line 217, ../sass/styles.scss */
+/* line 220, ../sass/styles.scss */
 .download-section {
   width: 100%;
   padding: 50px 0;
@@ -12534,7 +12607,7 @@ a:hover, a:focus {
   -o-background-size: cover;
 }
 
-/* line 228, ../sass/styles.scss */
+/* line 231, ../sass/styles.scss */
 #map {
   width: 100%;
   height: 200px;
@@ -12542,23 +12615,23 @@ a:hover, a:focus {
 }
 
 @media (min-width: 767px) {
-  /* line 236, ../sass/styles.scss */
+  /* line 239, ../sass/styles.scss */
   .content-section {
     padding-top: 250px;
   }
 
-  /* line 240, ../sass/styles.scss */
+  /* line 243, ../sass/styles.scss */
   .download-section {
     padding: 100px 0;
   }
 
-  /* line 244, ../sass/styles.scss */
+  /* line 247, ../sass/styles.scss */
   #map {
     height: 400px;
     margin-top: 250px;
   }
 }
-/* line 250, ../sass/styles.scss */
+/* line 253, ../sass/styles.scss */
 .btn {
   text-transform: uppercase;
   font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -12568,7 +12641,7 @@ a:hover, a:focus {
   transition: all .3s ease-in-out;
 }
 
-/* line 259, ../sass/styles.scss */
+/* line 262, ../sass/styles.scss */
 .btn-default {
   color: #F4645F;
   background-color: rgba(255, 255, 255, 0);
@@ -12612,7 +12685,7 @@ a:hover, a:focus {
   color: rgba(255, 255, 255, 0);
   background-color: #F4645F;
 }
-/* line 262, ../sass/styles.scss */
+/* line 265, ../sass/styles.scss */
 .btn-default:hover, .btn-default:focus {
   border: 1px solid #F4645F;
   outline: none;
@@ -12620,50 +12693,50 @@ a:hover, a:focus {
   background-color: #F4645F;
 }
 
-/* line 271, ../sass/styles.scss */
+/* line 274, ../sass/styles.scss */
 ul.banner-social-buttons {
   margin-top: 0;
 }
 
 @media (max-width: 1199px) {
-  /* line 277, ../sass/styles.scss */
+  /* line 280, ../sass/styles.scss */
   ul.banner-social-buttons {
     margin-top: 15px;
   }
 }
 @media (max-width: 767px) {
-  /* line 286, ../sass/styles.scss */
+  /* line 289, ../sass/styles.scss */
   ul.banner-social-buttons li {
     display: block;
     margin-bottom: 20px;
     padding: 0;
   }
-  /* line 290, ../sass/styles.scss */
+  /* line 293, ../sass/styles.scss */
   ul.banner-social-buttons li:last-child {
     margin-bottom: 0;
   }
 }
-/* line 297, ../sass/styles.scss */
+/* line 300, ../sass/styles.scss */
 footer {
   padding: 50px 0;
 }
-/* line 300, ../sass/styles.scss */
+/* line 303, ../sass/styles.scss */
 footer p {
   margin: 0;
 }
 
-/* line 305, ../sass/styles.scss */
+/* line 308, ../sass/styles.scss */
 ::-moz-selection, ::selection {
   text-shadow: none;
   background: #fcfcfc;
   background: rgba(244, 100, 95, 0.2);
 }
 
-/* line 312, ../sass/styles.scss */
+/* line 315, ../sass/styles.scss */
 img::selection {
   background: transparent;
 }
-/* line 316, ../sass/styles.scss */
+/* line 319, ../sass/styles.scss */
 img::-moz-selection {
   background: transparent;
 }
