--- a/public/assets/sass/styles.scss
+++ b/public/assets/sass/styles.scss
@@ -4,6 +4,9 @@
 
 /* App imports */
 @import "./_app-variables";
+@import "./_sidebar";
+
+
 
 html {
   width: 100%;
@@ -145,7 +148,7 @@ a {
 .intro {
   display: table;
   width: 100%;
-  height: auto;
+  height: 100vh;
   padding: 100px 0;
   text-align: center;
   color: $light;
@@ -171,7 +174,7 @@ a {
 
 @media(min-width:$screen-xs-max) {
   .intro {
-    height: 100%;
+    height: 100vh;
     padding: 0;
 
     .intro-body {
