--- a/public/assets/sass/styles.scss
+++ b/public/assets/sass/styles.scss
@@ -35,6 +35,11 @@ h6, .h6 {
   letter-spacing: 1px;
 }
 
+h3, .h3{
+  color: $light;
+  font-size: 18px;
+}
+
 p {
   margin: 0 0 25px;
   font-size: 18px;
