--- a/public/admin-assets/stylesheets/styles.css
+++ b/public/admin-assets/stylesheets/styles.css
@@ -286,12 +286,18 @@ html, body {
     width: 69%;
   }
 }
-/* line 225, ../sass/styles.scss */
+@media all and (min-width: 768px) {
+  /* line 224, ../sass/styles.scss */
+  .mdl-textfield.social-input {
+    width: 30%;
+  }
+}
+/* line 230, ../sass/styles.scss */
 .spacer.large {
   height: 50px;
 }
 
-/* line 228, ../sass/styles.scss */
+/* line 233, ../sass/styles.scss */
 .mdl-textfield ~ button.mdl-button--fab {
   vertical-align: baseline;
   right: 16px;
@@ -299,29 +305,29 @@ html, body {
   position: absolute;
 }
 
-/* line 235, ../sass/styles.scss */
+/* line 240, ../sass/styles.scss */
 button.center {
   margin: auto;
   display: block;
 }
 
-/* line 239, ../sass/styles.scss */
+/* line 244, ../sass/styles.scss */
 nav .separator {
   border: solid 1px rgba(255, 255, 255, 0.1);
 }
 
-/* line 243, ../sass/styles.scss */
+/* line 248, ../sass/styles.scss */
 .mdl-button--colored {
   background: #E64A19 !important;
   color: #FFFFFF !important;
 }
 
-/* line 247, ../sass/styles.scss */
+/* line 252, ../sass/styles.scss */
 .mdl-button--colored:hover {
   background-color: rgba(230, 74, 25, 0.58) !important;
 }
 
-/* line 251, ../sass/styles.scss */
+/* line 256, ../sass/styles.scss */
 .card-image.mdl-card {
   /*background: url('../assets/demos/image_card.jpg') center / cover;*/
   background-position: center !important;
@@ -333,52 +339,52 @@ nav .separator {
   margin-bottom: 4px;
 }
 
-/* line 263, ../sass/styles.scss */
+/* line 268, ../sass/styles.scss */
 .card-image > .mdl-card__actions {
   height: 52px;
   padding: 16px;
   background: rgba(0, 0, 0, 0.3);
 }
 
-/* line 269, ../sass/styles.scss */
+/* line 274, ../sass/styles.scss */
 .card-image.mdl-card:before {
   content: "";
   display: block;
   padding-top: 70%;
 }
 
-/* line 276, ../sass/styles.scss */
+/* line 281, ../sass/styles.scss */
 .card-image__filename {
   color: #fff;
   font-size: 14px;
   font-weight: 500;
 }
 
-/* line 282, ../sass/styles.scss */
+/* line 287, ../sass/styles.scss */
 .mdl-card__actions i {
   color: #EF5350;
   float: right;
 }
 
-/* line 288, ../sass/styles.scss */
+/* line 293, ../sass/styles.scss */
 dialog .mdl-dialog__content {
   padding: 0;
 }
 
-/* line 292, ../sass/styles.scss */
+/* line 297, ../sass/styles.scss */
 dialog .mdl-dialog__actions--full-width {
   padding: 0 8px;
 }
 
 /*Login*/
-/* line 300, ../sass/styles.scss */
+/* line 305, ../sass/styles.scss */
 .login-center {
   margin: auto;
   vertical-align: middle;
   display: inline-block;
 }
 
-/* line 306, ../sass/styles.scss */
+/* line 311, ../sass/styles.scss */
 .login-center:before {
   height: 50%;
   width: 100%;
@@ -390,30 +396,30 @@ dialog .mdl-dialog__actions--full-width {
   z-index: 0;
 }
 
-/* line 317, ../sass/styles.scss */
+/* line 322, ../sass/styles.scss */
 .full-height {
   height: 100%;
   line-height: 100vh;
   position: absolute;
 }
 
-/* line 322, ../sass/styles.scss */
+/* line 327, ../sass/styles.scss */
 .full-width {
   width: 100%;
   text-align: center;
 }
 
-/* line 327, ../sass/styles.scss */
+/* line 332, ../sass/styles.scss */
 .mdl-switch {
   width: auto;
 }
 
-/* line 330, ../sass/styles.scss */
+/* line 335, ../sass/styles.scss */
 .mdl-switch__label {
   margin-right: 24px;
 }
 
-/* line 334, ../sass/styles.scss */
+/* line 339, ../sass/styles.scss */
 .form-input {
   margin-top: 15px;
 }
